Fixed LF and names

--- a/i18n/text.properties
+++ b/i18n/text.properties
@@ -1,4 +1,4 @@
-_Layer=Capa
+_Layer=Capa1
 _Area=Superficie
-_Individuals=Individuos
-_Population=Población
+_Individuals=Individuos por unidad de \u00E1rea
+_Population=Poblaci\u00F3n
