Build 1.0.0-2 Initial commit

--- a/i18n/text.properties
+++ b/i18n/text.properties
@@ -1,4 +1,6 @@
-_Layer=Capa1
+#
+#Tue Nov 14 16:15:52 CET 2017
 _Area=Superficie
 _Individuals=Individuos por unidad de \u00E1rea
+_Layer=Capa
 _Population=Poblaci\u00F3n
